--- a/conf/application.conf
+++ b/conf/application.conf
@@ -25,6 +25,9 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 # Play Modules
 play.modules.enabled += "uk.gov.hmrc.pillar2externalteststub.config.Module"
 
+# Json error handler
+play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
+
 
 # The application languages
 # ~~~~~
@@ -49,12 +52,26 @@ play.http.router = prod.Routes
 # The below controllers are the default exceptions to this rule.
 
 controllers {
-  uk.gov.hmrc.pillar2externalteststub.controllers.MicroserviceHelloWorldController = {
+  # 300 is the default, you may need to change this according to your needs
+  confidenceLevel = 300
+
+  uk.gov.hmrc.pillar2externalteststub.controllers.SubscriptionController = {
     needsAuth = false
     needsLogging = false
     needsAuditing = false
   }
 }
+# Metrics plugin settings - graphite reporting is configured on a per env basis
+metrics {
+  enabled = true
+}
+
+# Microservice specific config
+
+auditing {
+  enabled = true
+}
+
 
 # Microservice specific config
 
