--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,6 +60,12 @@ controllers {
     needsLogging = false
     needsAuditing = false
   }
+  
+  uk.gov.hmrc.pillar2externalteststub.controllers.SubmitUKTRController = {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
 }
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
@@ -72,10 +78,7 @@ auditing {
   enabled = false
 }
 
-
 # Microservice specific config
-
-
 microservice {
   services {
     auth {
