--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,7 +69,7 @@ controllers {
 }
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
-  enabled = true
+  enabled = false
 }
 
 # Microservice specific config
@@ -78,7 +78,10 @@ auditing {
   enabled = false
 }
 
+
 # Microservice specific config
+
+
 microservice {
   services {
     auth {
