--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,7 +53,7 @@ play.http.router = prod.Routes
 
 controllers {
   # 300 is the default, you may need to change this according to your needs
-  confidenceLevel = 300
+  confidenceLevel = 50
 
   uk.gov.hmrc.pillar2externalteststub.controllers.SubscriptionController = {
     needsAuth = false
@@ -69,7 +69,7 @@ metrics {
 # Microservice specific config
 
 auditing {
-  enabled = true
+  enabled = false
 }
 
 
