PIL-1265 Add UKTR submission stub endpoint (#3)
* PIL-1265 Initial commit

* modified configs

* Pull in new changes

* Update error responses

* re-arragne models package

* More re-arranging

* Fixup test

* Update to match ticket

* Fixup

* Update 400 test case

* Add convenience constructors to ErrorResponse

* Update to more explicit assertions for errors

---------

Co-authored-by: stipoa <101046729+stipoa@users.noreply.github.com>
Co-authored-by: olakunlekuye2 <olakunle.kuye2@digital.hmrc.gov.uk>

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -60,10 +60,16 @@ controllers {
     needsLogging = false
     needsAuditing = false
   }
+  
+  uk.gov.hmrc.pillar2externalteststub.controllers.SubmitUKTRController = {
+    needsAuth = false
+    needsLogging = false
+    needsAuditing = false
+  }
 }
 # Metrics plugin settings - graphite reporting is configured on a per env basis
 metrics {
-  enabled = true
+  enabled = false
 }
 
 # Microservice specific config
