--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,6 +24,10 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 
 # Play Modules
 play.modules.enabled += "uk.gov.hmrc.pillar2externalteststub.config.Module"
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
+
+#MongoDb default data expiration days
+defaultDataExpireInSeconds = 2419200
 
 # Json error handler
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
@@ -77,4 +81,9 @@ microservice {
       port = 8500
     }
   }
+}
+
+mongodb {
+  uri = "mongodb://localhost:27017/"${appName}
+  timeToLiveInSeconds = 900
 }
