--- a/conf/application.conf
+++ b/conf/application.conf
@@ -27,7 +27,7 @@ play.modules.enabled += "uk.gov.hmrc.pillar2externalteststub.config.Module"
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
 #MongoDb default data expiration days
-defaultDataExpireInSeconds = 2419200
+defaultDataExpireInDays = 28
 
 # Json error handler
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
