Update error handling

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,7 +30,7 @@ play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 defaultDataExpireInDays = 28
 
 # Json error handler
-play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
+play.http.errorHandler = "uk.gov.hmrc.pillar2externalteststub.controllers.StubErrorHandler"
 
 
 # The application languages
