PIL-1638 Add Organisation management External test stub endpoints (#19)
Added new endpoints to manage test organisations for third-party
developers, enabling better testing capabilities through data
management.

## New Endpoints

### POST /pillar2/organisation/:pillar2Id
- Creates a new test organisation
- Returns 201 on successful creation
- Returns 409 if organisation with pillar2Id already exists
- Returns 400 for invalid request body
- Returns 500 for database errors

### GET /pillar2/organisation/:pillar2Id
- Retrieves organisation details
- Returns 200 with organisation data if found
- Returns 404 if no organisation exists with pillar2Id
- Returns 500 for database errors

### PUT /pillar2/organisation/:pillar2Id
- Updates existing organisation details
- Returns 200 with updated organisation data
- Returns 404 if no organisation exists with pillar2Id
- Returns 400 for invalid request body
- Returns 500 for database errors

### DELETE /pillar2/organisation/:pillar2Id
- Deletes an existing organisation
- Returns 204 on successful deletion
- Returns 404 if no organisation exists with pillar2Id
- Returns 500 for database errors

## Technical Implementation

### MongoDB Integration
- Added MongoDB repository layer with TTL index for automatic data
cleanup, the number of days for the TTL is driven b the
`defaultDataExpireInDays` value in configuration
- Configured collection name as "organisation"
- Added unique index on pillar2Id field to prevent duplicates
- Implemented CRUD operations with error handling

### Data Models
- Added `TestOrganisation` model with:
  - Organisation details (name, registration date, domestic status)
  - Accounting period information
  - Last updated timestamp
- Implemented custom JSON formats for:
  - API responses (ISO-8601 formatted timestamps for human readability)
  - MongoDB storage (BSON date format for efficient querying)

### Testing
- Added comprehensive unit tests for:
  - Co

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -24,9 +24,13 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientV2Module"
 
 # Play Modules
 play.modules.enabled += "uk.gov.hmrc.pillar2externalteststub.config.Module"
+play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
+
+#MongoDb default data expiration days
+defaultDataExpireInDays = 28
 
 # Json error handler
-play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
+play.http.errorHandler = "uk.gov.hmrc.pillar2externalteststub.controllers.StubErrorHandler"
 
 
 # The application languages
@@ -77,4 +81,9 @@ microservice {
       port = 8500
     }
   }
+}
+
+mongodb {
+  uri = "mongodb://localhost:27017/"${appName}
+  timeToLiveInSeconds = 900
 }
