move country list loading to config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -64,12 +64,16 @@ controllers {
     needsLogging = false
     needsAuditing = false
   }
-  
+
   uk.gov.hmrc.pillar2externalteststub.controllers.SubmitUKTRController = {
     needsAuth = false
     needsLogging = false
     needsAuditing = false
   }
+}
+
+location.iso-country-code-list {
+  all = "ISO-country-code-list.json"
 }
 
 # Microservice specific config
