[PIL-2182] - add scala3 scalafmt rule

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -4,6 +4,7 @@ maxColumn = 150
 lineEndings = unix
 importSelectors = singleLine
 runner.dialect = Scala3
+rewrite.scala3.convertToNewSyntax = true
 
 project {
   git = true
